fine check rapido cap 5 (todo: check approfondito)

--- a/latex_source/conclusioni.tex
+++ b/latex_source/conclusioni.tex
@@ -23,7 +23,7 @@ Per mantenere immutata la maggior parte del firmware è necessario scegliere un 
 
 Per quanto riguarda i problemi di deriva termica dello strumento la soluzione migliore sarebbe quella di implementare un controllo di temperatura in grado di mantenere lo strumento in condizioni termiche stabili. Per questa implementazione è necessario sviluppare un controllore di temperatura all'interno del firmware dello strumento, oppure alternativamente è possibile utilizzare un controllore hardware dedicato. La seconda soluzione è preferibile, poiché richiede un minor sforzo in termini di tempo di sviluppo, ed inoltre riduce il tempo di testing della soluzione implementata.
 
-Si potrà inoltre utilizzare lo stesso strumento anche per misure di velocità e vibrometria, con l'implementazione di algoritmi che sfruttano a loro volta l'estrazione dei toni fondamentali del segnale interferometrico. Per fare ciò è necessario, come per la misura di distanza, effettuare una fase approfondita di taratura e implementare algoritmi di controllo dell'affidabilità della misura.
+Si potrà inoltre utilizzare lo stesso strumento anche per misure di velocità e vibrometria, con l'implementazione di algoritmi che sfruttano a loro volta l'estrazione dei toni fondamentali del segnale interferometrico. Per fare ciò è necessario, come per la misura di distanza, effettuare una fase approfondita di taratura e implementare algoritmi di controllo dell'affidabilità della misura.
 
 
 
