--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -85,7 +85,7 @@
 \fancyhead[LO]{\bfseries\rightmark}     
 \renewcommand{\headrulewidth}{0.3pt} 
 
-\include{appendiceA}
+%\include{appendiceA}
 
 % ---- Bibliography ----
 \addcontentsline{toc}{chapter}{Bibliografia}
